# atri

./: .env  .gitignore  LICENSE  README.md  benchmark_longmemeval.py  main.py  pyproject.toml  requirements.txt  test_core.py  test_kuzu_graphstore.py  test_vecstore.py
core/: starter.py
core/pipeline/: emotion.py  graph_mem.py  summarize.py
core/provider/embedding/: __init__.py  base.py  nomic_embed.py
core/provider/llm/: openai_source.py
core/storage/: vec_db.py
core/storage/documents/: document_storage.py  sqlite_init.sql
core/storage/embedding/: embedding_storage.py
core/storage/graph/: base.py  kuzu_impl.py
core/util/: misc.py  prompts.py  tools.py
data/: cmd_config.json  data_v3.db
