[project]
name = "atri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "faiss-cpu==1.10.0", # faiss-cpu 1.11.0 does not support macOS 13.0
    "networkx>=3.4.2",
    "nomic[local]",
    "scipy>=1.15.3",
    "numpy==1.26.3",
    "kuzu>=0.10.0",
    "packaging>=24.2",
    "openai==1.35.1",
    "tqdm==4.66.4",
    "backoff==2.2.1",
    "nltk==3.9.1",
]
